jenkins-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc 
  labels:
    app: jenkins
spec:
  type: LoadBalancer
  ports:
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: jenkins
